# shelf-count

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  temp.text
.claude/: settings.json
docs/knowledge/: classification-approaches.md  fine-tuning-detection-models.md  fun-personality-analysis-human.md  non-front-facing-classification.md
docs/plans/: 2026-03-02-proto-a-react-native.md  2026-03-04-proto-b-flutter-design.md  2026-03-04-proto-b-flutter-plan.md  2026-03-05-classification-layer-design.md  2026-03-05-classification-layer-plan.md  2026-03-05-proto-c-rust-flutter-design.md  2026-03-05-proto-c-rust-flutter-plan.md
docs/specs/: overview.md  proto-a-react-native.md  proto-b-flutter.md  proto-c-rust-flutter.md
proto-a-rn/: app.json  babel.config.js  biome.json  eas.json  metro.config.js  package-lock.json  package.json
proto-a-rn/app/: _layout.tsx  modal.tsx
proto-a-rn/components/: BoundingBoxOverlay.tsx  useClientOnlyValue.ts  useColorScheme.ts
proto-a-rn/lib/: frameStore.ts
proto-b-flutter/: README.md  pubspec.yaml
proto-c-rust-flutter/server/: .env  Cargo.toml
proto-c-rust-flutter/server/data/: products.json
proto-c-rust-flutter/server/models/: clip-vit-b32-visual.onnx  detr-resnet-50-sku110k.onnx  yolov8m-sku110k.onnx
proto-c-rust-flutter/server/src/: error.rs  main.rs  products.rs
proto-c-rust-flutter/server/src/ml/: clip.rs  detr.rs  mod.rs  types.rs  yolo.rs
proto-c-rust-flutter/server/src/routes/: analyze.rs  health.rs  mod.rs  products.rs
training/: .gitignore  export_tflite.py  prepare_sku110k.py  requirements.txt  train.py
(+84 files in other folders)
