[package]
name = "shelf-count-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
ndarray = "0.17"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
kamadak-exif = "0.5"
zune-jpeg = "=0.4.13"
